[tool.poetry]
name = "image-ml"
version = "0.1.0"
description = "Image and Text Multimodal Machine Learning Project"
authors = ["Robin <robin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.3.0"
torch = ">=1.9.0"
torchvision = ">=0.10.0"
transformers = ">=4.10.0"
pillow = ">=8.3.0"
numpy = ">=1.21.0"
scikit-learn = ">=0.24.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = "^21.7b0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"